fix(Navbar): add overflow-x - "hidden" in hooks-container

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -15,6 +15,8 @@ nav{
 
     .hooks-container{
         display:flex;
+        overflow-x:hidden;
+
         span{
             padding: 0 10px;
             cursor: pointer;
